Bugfix in pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,3 +18,6 @@ classifiers = [
 [project.urls]
 Homepage = "https://github.com/petroniocandido/st_nca"
 Issues = "https://github.com/petroniocandido/st_nca/issues"
+
+[tool.setuptools]
+py-modules = ["st_nca"]
