--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
-numpy
-pandas
-matplotlib
-pyarrow
-networkx
+torch>=2.0.0
+numpy>=1.21.0
+pandas>=1.3.0
+matplotlib>=3.4.0
+networkx>=2.6.0
+tqdm>=4.62.0
+pyarrow>=6.0.0
+tensordict>=0.8.0
+scikit-learn>=1.6.0
